--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
           - '2.7'
           - '2.6'
           - '2.5'
+          - jruby
     steps:
       - name: Checkout
         uses: actions/checkout@v2
